# LogMate

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
.github/workflows/: ci.yml
config/: docker.toml  file-config.toml  file-output-config.toml  logmate.example.toml  perf-config.toml  security-config.toml  tcp-config.toml  udp-config.toml
crates/logmate-cli/: Cargo.toml
crates/logmate-cli/src/: main.rs
crates/logmate-core/: Cargo.toml
crates/logmate-core/src/: config.rs  error.rs  lib.rs  log_entry.rs  traits.rs
crates/logmate-ingestion/: Cargo.toml
crates/logmate-ingestion/src/: file.rs  lib.rs  manager.rs  stdin.rs  tcp.rs  udp.rs
crates/logmate-modules/: Cargo.toml
crates/logmate-modules/src/: lib.rs  parser.rs  pattern.rs  performance.rs  security.rs
crates/logmate-output/: Cargo.toml
crates/logmate-output/src/: file.rs  lib.rs  loki.rs  metrics.rs  stdout.rs
crates/logmate-pipeline/: Cargo.toml
crates/logmate-pipeline/src/: lib.rs  pipeline.rs
