[package]
name = "logmate-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, traits, and utilities for LogMate"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
