[package]
name = "logmate-modules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Processing modules for LogMate"

[features]
default = ["pattern", "parser", "metrics", "security"]
pattern = []
parser = []
metrics = ["dep:hdrhistogram", "dep:chrono"]
security = ["dep:aho-corasick"]
full = ["pattern", "parser", "metrics", "security"]

[dependencies]
logmate-core = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hdrhistogram = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
aho-corasick = { workspace = true, optional = true }
