[package]
name = "logmate-output"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Output sinks for LogMate (stdout, file, Grafana)"

[dependencies]
logmate-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
